Change goal color to green

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="stat-value" id="treasury">$1,000</span>
                 <span class="stat-label">Treasury</span>
             </div>
-            <div class="stat">
+            <div class="stat goal">
                 <span class="stat-value">$25,000</span>
                 <span class="stat-label">Goal</span>
             </div>
